--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="3.html">JavaScript</a></li>
         </ol>
         
-        <h2> WEB </h2>
+        <h2> WWWEB </h2>
 
         <p><a href="https://terms.naver.com/entry.naver?docId=784905&cid=41828&categoryId=41828" target="_blank" title="WEB의 정의">
         [ Web ]</a>
